# zooplankton-image-tool

./: README.md  classifier.py  compress-cmd.sh  limo  log.txt  pyproject.toml  sweep.yaml  zit.py
filters/: filter.py
